# RAG-Evaluation

./: .gitignore  README.md  RESULTS.md  docker-compose.vectorstores.yml  pyproject.toml
config/: openrouter_models.json
data/: ground_truth.json  pdf_mapping.json  prepared_chunks.json
docs/: 1_loader.md  2_parser.md  3_embedding.md  4-1_pre_retriever.md  4-2_post_retriever.md  4_retriever.md  5_generation.md  5_generation_e2e_axis.md  6_cartesian.md  EXPERIMENT_PLAN.md  MISTAKES_LEARNED.md  PAPER.md  PAPER_KIISE_STYLE.tex  REPORT.md  analysis_summary.json  cost-report.md  experiment-design.md  generation_hyperparameters.json  generation_hyperparameters.md  model-inventory-full.md  model-inventory.md  rag-benchmark-plan.md  rag-demo-plan.md
results/baseline_langchain/: baseline_gpt-4-turbo_results.json
results/phase1_parser/: pymupdf.json  pymupdf4llm.json  pypdf.json
scripts/: analyze_open_vs_closed.py  analyze_retrieval_deep.py  analyze_retrieval_overlap.py  auto_evaluate.py  auto_judge_pipeline.py  baseline_langchain.py  bench_all.py  bench_e2e_axis_wise.py  bench_loader_extended.py  bench_parser_extended.py  bench_parser_semantic.py  bench_phase4_parallel.py  bench_phase5_llm.py  bench_pre_retriever.py  bench_reranker.py  bench_reranker_gpu.py  bench_retriever.py  build_hf_dataset.py  cartesian_accuracy.py  collect_and_aggregate.py  consolidate_results.py  eval_utils.py  evaluate_ragas.py  export_rerank_cache.py  finalize_dataset.py  judge_leaderboard.py  llm_judge.py  phase5_batch_generate.py  phase5_experiments.py  phase5_provider.py  retry_failed.py
(+134 files in other folders)
